# emborodo

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: configuration.toml
assets/shaders/: default.frag  default.vert
cmake/: Glfw.cmake  Glm.cmake  ImGui.cmake
sources/emborodo/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
sources/emborodo/game_objects/: game_object.hpp  third_person_camera.cpp  third_person_camera.hpp
sources/enborodo/: CMakeLists.txt  application.cpp  application.hpp  configuration.hpp
sources/enborodo/configuration/: application_configuration.cpp  application_configuration.hpp
sources/enborodo/gui/: gui_controller.hpp  gui_window.hpp
sources/enborodo/logging/: log_level.hpp  logger.cpp  logger.hpp
sources/enborodo/logging/sinks/: log_sink.hpp  terminal_sink.cpp  terminal_sink.hpp
sources/enborodo/memory/: monotonic_allocator.cpp  monotonic_allocator.hpp
sources/enborodo/platform/gui/imgui/: imgui_gui_controller.cpp  imgui_gui_controller.hpp  imgui_gui_window.cpp  imgui_gui_window.hpp
sources/enborodo/platform/rendering/gl/: gl_camera.cpp  gl_camera.hpp  gl_index_buffer.cpp  gl_index_buffer.hpp  gl_model.cpp  gl_model.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_shader.cpp  gl_shader.hpp  gl_texture.cpp  gl_texture.hpp  gl_vertex_buffer.cpp  gl_vertex_buffer.hpp
sources/enborodo/platform/system/: sleep.cpp
sources/enborodo/platform/system/windows/: windows_sleep.cpp
sources/enborodo/platform/windowing/glfw/: glfw_input.cpp  glfw_input.hpp  glfw_window.cpp  glfw_window.hpp
sources/enborodo/rendering/: camera.hpp  color.hpp  color.inl  image.cpp  image.hpp  index_buffer.hpp  mesh.cpp  mesh.hpp  model.hpp  renderer.cpp  renderer.hpp  renderer_backend.cpp  renderer_backend.hpp  shader.hpp  texture.cpp  texture.hpp  vertex.hpp  vertex_buffer.hpp
sources/enborodo/system/: file.cpp  file.hpp  sleep.hpp
sources/enborodo/utilities/: math.hpp  noncopyable.hpp
sources/enborodo/windowing/: frame_control.cpp  frame_control.hpp  input.hpp  window.cpp  window.hpp  window_backend.cpp  window_backend.hpp
tests/enborodo/utilities/: math_tests.cpp
